fixed buggy overflow

--- a/css/master.css
+++ b/css/master.css
@@ -1,11 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
-html {
-  overflow-x: hidden;
-}
-
 body {
-  overflow-x: hidden;
   background-image: linear-gradient(#002F67, #001834);
   height: 100vh;
 }
@@ -14,8 +9,8 @@ body {
   padding: 0px;
   margin: 0px;
   font-family: 'Open Sans', sans-serif;
-  overflow-x: hidden;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .active {
